cabal-version:      2.4
name:               hangman-web
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:
A version of hangman that runs in the browser

-- A longer description of the package.
description:
Project for haskall course

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Donie Kelly
maintainer:         donie.kelly@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hangman-web
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
